debug admin and curd tools

--- a/.env
+++ b/.env
@@ -1,5 +1,11 @@
-DATABASE_HOST = ap-southeast.connect.psdb.cloud
-DATABASE_NAME = ceproject
-DATABASE_PORT = 3306
-DATABASE_USER = 6kpvun64dne9c8ofe54d
-DATABASE_PASSWORD = pscale_pw_dTl4P0vLk2yOxnKjkXlL35WZ8oPaCzZ1F3X0av1ZIEF
+# DATABASE_HOST = ap-southeast.connect.psdb.cloud
+# DATABASE_NAME = ceproject
+# DATABASE_PORT = 3306
+# DATABASE_USER = 6kpvun64dne9c8ofe54d
+# DATABASE_PASSWORD = pscale_pw_dTl4P0vLk2yOxnKjkXlL35WZ8oPaCzZ1F3X0av1ZIEF
+
+DATABASE_HOST = db-postgresql-sgp1-56608-do-user-12968204-0.b.db.ondigitalocean.com
+DATABASE_NAME = defaultdb
+DATABASE_PORT = 25060
+DATABASE_USER = doadmin
+DATABASE_PASSWORD = AVNS_bXQmx_V8B3bMS_Dhhh2
