--- a/nginx.conf
+++ b/nginx.conf
@@ -1,21 +1,14 @@
-worker_processes  1;
-
-events {
-    worker_connections  1024;
-}
+events {}
 
 http {
-    sendfile on;
-
     server {
         listen 80;
-        server_name your-domain.com;
+        server_name localhost;
 
         location / {
-            proxy_pass http://web:3000;
+            proxy_pass http://localhost:3000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
     }
 }
