--- a/nginx.conf
+++ b/nginx.conf
@@ -1,14 +1,22 @@
-events {}
+worker_processes 1;
+
+events {
+  worker_connections 1024;
+}
 
 http {
-    server {
-        listen 80;
-        server_name localhost;
+  server {
+    listen 80;
+    server_name localhost;
 
-        location / {
-            proxy_pass http://localhost:3000;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-        }
+    location / {
+      root /usr/share/nginx/html;
+      index index.html;
+      try_files $uri $uri/ /index.html;
     }
+
+    location /api {
+      proxy_pass http://localhost:3000;
+    }
+  }
 }
