--- a/nginx.conf
+++ b/nginx.conf
@@ -1,10 +1,10 @@
 worker_processes 1;
 
-events {
-  worker_connections 1024;
-}
+events { worker_connections 1024; }
 
 http {
+  sendfile on;
+
   server {
     listen 80;
     server_name localhost;
@@ -13,10 +13,6 @@ http {
       root /usr/share/nginx/html;
       index index.html;
       try_files $uri $uri/ /index.html;
-    }
-
-    location /api {
-      proxy_pass http://localhost:3000;
     }
   }
 }
