--- a/nginx.conf
+++ b/nginx.conf
@@ -1,18 +1,36 @@
-worker_processes 1;
+user  nginx;
+worker_processes  auto;
 
-events { worker_connections 1024; }
+error_log  /var/log/nginx/error.log warn;
+pid        /var/run/nginx.pid;
+
+events {
+    worker_connections  1024;
+}
 
 http {
-  sendfile on;
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
 
-  server {
-    listen 80;
-    server_name localhost;
+    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                      '$status $body_bytes_sent "$http_referer" '
+                      '"$http_user_agent" "$http_x_forwarded_for"';
 
-    location / {
-      root /usr/share/nginx/html;
-      index index.html;
-      try_files $uri $uri/ /index.html;
+    access_log  /var/log/nginx/access.log  main;
+
+    sendfile        on;
+    #tcp_nopush     on;
+
+    keepalive_timeout  65;
+
+    server {
+        listen       80;
+        server_name  localhost;
+
+        location / {
+            root   /usr/share/nginx/html;
+            index  index.html index.htm;
+            try_files $uri $uri/ /index.html;
+        }
     }
-  }
 }
