--- a/nginx.conf
+++ b/nginx.conf
@@ -1,32 +1,29 @@
-worker_processes  1;
+server {
+    listen 80;
+    server_name example.com;
 
-events {
-  worker_connections  1024;
-}
+    # Forward all HTTP traffic to HTTPS
+    if ($scheme != "https") {
+        return 301 https://$server_name$request_uri;
+    }
 
-http {
-  include  /etc/nginx/mime.types;
-  default_type  application/octet-stream;
+    # SSL configuration
+    ssl_certificate /etc/letsencrypt/live/example.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/example.com/privkey.pem;
+    ssl_trusted_certificate /etc/letsencrypt/live/example.com/chain.pem;
+    ssl_session_cache shared:SSL:1m;
+    ssl_session_timeout 5m;
 
-  sendfile  on;
-  keepalive_timeout  65;
+    # Enable SSL
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers on;
+    ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
 
-  server {
-    listen  80;
-    server_name  localhost;
-
+    # Forward API requests to the NestJS app
     location / {
-      root  /usr/share/nginx/html;
-      index  index.html index.htm;
-      try_files $uri $uri/ /index.html;
+        proxy_pass http://localhost:3000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
-
-    location /api/ {
-      proxy_pass http://backend:3000/;
-      proxy_set_header Host $host;
-      proxy_set_header X-Real-IP $remote_addr;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header X-Forwarded-Proto $scheme;
-    }
-  }
 }
