--- a/nginx.conf
+++ b/nginx.conf
@@ -1,29 +1,22 @@
-server {
-    listen 80;
-    server_name example.com;
+worker_processes 1;
 
-    # Forward all HTTP traffic to HTTPS
-    if ($scheme != "https") {
-        return 301 https://$server_name$request_uri;
+events { worker_connections 1024; }
+
+http {
+    sendfile on;
+
+    upstream app {
+        server app:3000;
     }
 
-    # SSL configuration
-    ssl_certificate /etc/letsencrypt/live/example.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/example.com/privkey.pem;
-    ssl_trusted_certificate /etc/letsencrypt/live/example.com/chain.pem;
-    ssl_session_cache shared:SSL:1m;
-    ssl_session_timeout 5m;
+    server {
+        listen 80;
 
-    # Enable SSL
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_prefer_server_ciphers on;
-    ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
-
-    # Forward API requests to the NestJS app
-    location / {
-        proxy_pass http://localhost:3000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        location / {
+            proxy_pass http://app;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        }
     }
 }
